[gd_scene load_steps=14 format=3 uid="uid://bmhrdj1d7n0nq"]

[ext_resource type="Script" path="res://scripts/backend/Login.gd" id="1_sd067"]
[ext_resource type="Theme" uid="uid://8ljahhyhocjx" path="res://assets/themes/UI.tres" id="2_vh8gy"]
[ext_resource type="Texture2D" uid="uid://c1vvjliprhv3e" path="res://assets/ui/panels/menu_title_panel1.png" id="3_pq1l3"]
[ext_resource type="FontFile" uid="uid://dn8jthylka01q" path="res://assets/fonts/AtlantisHeadline-Bold.ttf" id="4_3p851"]
[ext_resource type="Texture2D" uid="uid://c2ih08t74tjfr" path="res://assets/ui/textbox/textbox_v1.png" id="5_qinv6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8u233"]
texture = ExtResource("3_pq1l3")
texture_margin_left = 60.0
texture_margin_top = 60.0
texture_margin_right = 60.0
texture_margin_bottom = 60.0
region_rect = Rect2(0, 0, 720, 720)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bap6"]
bg_color = Color(0, 0, 0, 0.568627)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2aesk"]
texture = ExtResource("5_qinv6")
texture_margin_left = 45.4039
texture_margin_top = 45.0
texture_margin_right = 45.0
texture_margin_bottom = 45.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edgq0"]
bg_color = Color(0, 0, 0, 0.54902)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.705882)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 4
anti_aliasing = false

[sub_resource type="Animation" id="Animation_pn3gj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputCanvas/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fk65p"]
resource_name = "fade_in"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputCanvas/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_27u6h"]
resource_name = "fade_out"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputCanvas/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lw7mb"]
_data = {
"RESET": SubResource("Animation_pn3gj"),
"fade_in": SubResource("Animation_fk65p"),
"fade_out": SubResource("Animation_27u6h")
}

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sd067")
metadata/_edit_vertical_guides_ = [360.0]
metadata/_edit_horizontal_guides_ = [169.0]

[node name="BGCanvas" type="CanvasLayer" parent="."]

[node name="BGPanel" type="Panel" parent="BGCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vh8gy")

[node name="InputCanvas" type="CanvasLayer" parent="."]

[node name="PageInputMargin" type="MarginContainer" parent="InputCanvas"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 777.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 75

[node name="InputVBox" type="VBoxContainer" parent="InputCanvas/PageInputMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleMargin" type="MarginContainer" parent="InputCanvas/PageInputMargin/InputVBox"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="PageTitlePanel" type="Panel" parent="InputCanvas/PageInputMargin/InputVBox/TitleMargin"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8u233")

[node name="CenterContainer" type="CenterContainer" parent="InputCanvas/PageInputMargin/InputVBox/TitleMargin/PageTitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="InputCanvas/PageInputMargin/InputVBox/TitleMargin/PageTitlePanel/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.819608, 0.666667, 0.223529, 1)
theme_override_colors/font_shadow_color = Color(0.521569, 0.309804, 0.0705882, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("4_3p851")
theme_override_font_sizes/font_size = 36
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Email" type="VBoxContainer" parent="InputCanvas/PageInputMargin/InputVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="InputCanvas/PageInputMargin/InputVBox/Email"]
layout_mode = 2
theme = ExtResource("2_vh8gy")
text = "Email  Address"

[node name="LineEdit" type="LineEdit" parent="InputCanvas/PageInputMargin/InputVBox/Email"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_vh8gy")
placeholder_text = "Email Address"

[node name="Password" type="VBoxContainer" parent="InputCanvas/PageInputMargin/InputVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="InputCanvas/PageInputMargin/InputVBox/Password"]
layout_mode = 2
theme = ExtResource("2_vh8gy")
text = "Password"

[node name="LineEdit" type="LineEdit" parent="InputCanvas/PageInputMargin/InputVBox/Password"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_vh8gy")
placeholder_text = "Password"
secret = true

[node name="SubmitMargin" type="MarginContainer" parent="InputCanvas/PageInputMargin/InputVBox"]
layout_mode = 2
theme_override_constants/margin_left = 110
theme_override_constants/margin_right = 110

[node name="LoginButton" type="Button" parent="InputCanvas/PageInputMargin/InputVBox/SubmitMargin"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("2_vh8gy")
text = "Login"

[node name="RedirectRegister" type="MarginContainer" parent="InputCanvas/PageInputMargin/InputVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="CenterContainer" type="CenterContainer" parent="InputCanvas/PageInputMargin/InputVBox/RedirectRegister"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="InputCanvas/PageInputMargin/InputVBox/RedirectRegister/CenterContainer"]
clip_contents = false
layout_mode = 2
theme = ExtResource("2_vh8gy")
bbcode_enabled = true
text = "[center]Dont have an account yet?
Tap here to [color=blue][u]register[/u][/color]![/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Button" type="Button" parent="InputCanvas/PageInputMargin/InputVBox/RedirectRegister"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vh8gy")
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
flat = true

[node name="CanvasModulate" type="CanvasModulate" parent="InputCanvas"]
visible = false
color = Color(1, 1, 1, 0)

[node name="PopupCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="DarkenBGPanel" type="Panel" parent="PopupCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6bap6")

[node name="PopupMargin" type="MarginContainer" parent="PopupCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 420
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 420

[node name="Panel" type="Panel" parent="PopupCanvas/PopupMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2aesk")

[node name="ContentMargin" type="MarginContainer" parent="PopupCanvas/PopupMargin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ContentVBox" type="VBoxContainer" parent="PopupCanvas/PopupMargin/Panel/ContentMargin"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="PopupTitle" type="Label" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_vh8gy")
theme_override_font_sizes/font_size = 28
text = "PopupTitle"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_edgq0")

[node name="MessageMargin" type="MarginContainer" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PopupMessage" type="Label" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox/Panel/MessageMargin"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_vh8gy")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "PopupMessage"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InputHBox" type="HBoxContainer" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox"]
layout_mode = 2

[node name="PopupClose" type="Button" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox/InputHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource("2_vh8gy")
text = "Close"

[node name="PopupConfirm" type="Button" parent="PopupCanvas/PopupMargin/Panel/ContentMargin/ContentVBox/InputHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource("2_vh8gy")
text = "Confirm"

[node name="AuthenticationRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="RealtimeDBRequest" type="HTTPRequest" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lw7mb")
}

[connection signal="pressed" from="InputCanvas/PageInputMargin/InputVBox/SubmitMargin/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="button_up" from="InputCanvas/PageInputMargin/InputVBox/RedirectRegister/Button" to="." method="_on_redirect_register_btn_button_up"]
[connection signal="request_completed" from="AuthenticationRequest" to="." method="_on_authentication_request_completed"]
[connection signal="request_completed" from="RealtimeDBRequest" to="." method="_on_realtime_db_request_completed"]
